fix spacing for dropdown

--- a/src/components/video-infos-dropdown/video-infos-dropdown.scss
+++ b/src/components/video-infos-dropdown/video-infos-dropdown.scss
@@ -16,10 +16,10 @@
     top: 40px;
     z-index: 1;
     left: 0;
-    margin: 15px;
+    padding: 15px;
 
     @include for-tablet-portrait-up {
-        margin: 0;
+        padding: 0;
         max-width: 50%;
         left: auto;
         position: absolute;
